# ni

./: .dockerignore  .gitignore  .gitlab-ci.yml  .jenkins.yaml  .travis.yml  CHANGELOG.md  COPYING  Dockerfile  README  README.md  dotenv  editable_list_template.js  manage.py  nose.cfg  pyproject.toml  requirements.txt  start_dev_noclook.sh
.github/workflows/: codeql-analysis.yml  run-tests.yaml
doc/: Setup >2.0 neo4j db  Upgrade 1.8.3 with 1.9 bindings  Upgrade to NOCLook 2.0  Upgrade_to_Django_1.8  dependencies_and_tools  editable_list_template.js
docker/: Dockerfile  alpine-start.sh  cat-consume.sh  compose-dev.yml  db-restore.sh  db-restore.txt  dotenv  neo4j.properties  ni-data.conf.dist  setup.sh  start.sh
norduni/graphdb/: __init__.py  contextmanager.py  exceptions.py  helpers.py  models.py
norduni/niweb/: urls.py  wsgi.py
norduni/scripts/: bootstrap.sh  cleanup_activitylog.txt  cleanup_host_services.py  cleanup_peering_partner.py  clone-gitonly.sh  clone.sh  customer_to_ip_backbone.py  delete_handle_ids.py  delete_host_services.py  django_hack.py  django_setup.py  noclook_bulk_service.py  noclook_cfengine_consumer.py  noclook_checkmk_consumer.py  noclook_consumer.py  noclook_csv_consumer.py  noclook_json_consumer.py  noclook_juniper_consumer.py  noclook_nmap_consumer.py  noclook_nunoc_consumer.py  noclook_producer.py  noclook_raritan_consumer.py  noclook_snap_consumer.py  noclook_sunet_json_docker_image_consumer.py  noclook_sunet_json_host_consumer.py  (+4 more)
requirements/: common.txt  dev.txt  prod.txt  testing.txt
scr/: niweb.wsgi
src/: niweb.wsgi
(+918 files in other folders)
